examples/invalid/test10.alice
The room main ()
opened
  .
closed
